azero-validator/tools/firewall/rules.v4
# Generated by iptables-save v1.8.7 on Mon Nov  7 14:21:46 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]

#### GENERAL
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.66.66.0/24 -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

#### SSH
-A INPUT -s 10.66.66.0/24 -p tcp -m tcp --dport 6969 -j ACCEPT
-A INPUT -s 167.235.196.205 -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6969 -j ACCEPT


#### TELEGRAF
-A INPUT -s 10.66.66.0/24 -p tcp -m multiport --dports 9100 -j ACCEPT


###### AZERO
# Metrics
-A INPUT -s 10.66.66.0/24,127.0.0.1 -p tcp -m multiport --dports 9615 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# RPC
-A INPUT -s 10.66.66.0/24,127.0.0.1 -p tcp -m multiport --dports 9933 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# WebSocket
-A INPUT -s 10.66.66.0/24,127.0.0.1 -p tcp -m multiport --dports 9944 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# P2P Block
-A INPUT -p tcp -m multiport --dports 30333 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# Node Status Validator
-A INPUT -p tcp -m multiport --dports 30343 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

##### NGINX
#-A INPUT -p tcp -m multiport --dports 80,443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT


###### MASSA
# API Public and Local
-A INPUT -p tcp -m multiport --dports 31244:31245 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# Peer Block
-A INPUT -p tcp -m multiport --dports 33035 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT


###### INERY
# P2P
-A INPUT -p tcp -m multiport --dports 9010 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# API
-A INPUT -p tcp -m multiport --dports 8888 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT


####### CELESIA VALIDATOR
## gRPC
-A INPUT -p tcp -m multiport --dports 9090 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# gRPC-web
-A INPUT -p tcp -m multiport --dports 9091 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# api
-A INPUT -p tcp -m multiport --dports 1317 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# p2p
-A INPUT -p tcp -m multiport --dports 26656 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# Metrics
-A INPUT -s 10.66.66.0/24,127.0.0.1  -p tcp -m multiport --dports 26660 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT


#### BLOCK
-A INPUT -i eth0 -j DROP

-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 33035 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 31245 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 31244 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 30343 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 30333 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 9944 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 9933 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 9615 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon Nov  7 14:21:46 2022
# Generated by iptables-save v1.8.7 on Mon Nov  7 14:21:46 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 33035 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 31245 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 31244 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 30343 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 30333 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 9944 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 9933 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 9615 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 33035 -j DNAT --to-destination 172.17.0.2:33035
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 31245 -j DNAT --to-destination 172.17.0.2:31245
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 31244 -j DNAT --to-destination 172.17.0.2:31244
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 30343 -j DNAT --to-destination 172.17.0.3:30343
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 30333 -j DNAT --to-destination 172.17.0.3:30333
-A DOCKER -d 127.0.0.1/32 ! -i docker0 -p tcp -m tcp --dport 9944 -j DNAT --to-destination 172.17.0.3:9944
-A DOCKER -d 127.0.0.1/32 ! -i docker0 -p tcp -m tcp --dport 9933 -j DNAT --to-destination 172.17.0.3:9933
-A DOCKER -d 127.0.0.1/32 ! -i docker0 -p tcp -m tcp --dport 9615 -j DNAT --to-destination 172.17.0.3:9615
COMMIT
# Completed on Mon Nov  7 14:21:46 2022
#
#
#

## ANTI DDOS ###
*mangle
:PREROUTING ACCEPT [55:3545]
:INPUT ACCEPT [55:3545]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [46:3552]
:POSTROUTING ACCEPT [46:3552]

### 1: Drop invalid packets ### 
-A PREROUTING -m conntrack --ctstate INVALID -j DROP

### 2: Drop TCP packets that are new and are not SYN ### 
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP

### 3: Drop SYN packets with suspicious MSS value ### 
-A PREROUTING -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP  

## 4: Block packets with bogus TCP flags ### 
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP

## 5: Pre route ICMP
-A PREROUTING ! -s 10.66.66.0/24 -p icmp -j DROP

### 7: Drop fragments in all chains ### 
-A PREROUTING -f -j DROP

### 8: Limit connections per source IP ### 
-A PREROUTING -m conntrack --ctstate INVALID -j DROP
COMMIT
